Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33628

Crash when en- and disabling "Overwrite background color" setting while compile output empty.

XMLWordPrintable

    • 99d143508 (18.0)

      Qt Creator 18 allows to owverride the background colors of output panes. When I enable and disable the Compule output background color while the Compile output pane of a configured project is open and is empty, Qt Creator crashes.

      Backtrace
      2  operator()                                                                                                                                                                                                                                                                                                                                                                                                                                            compileoutputwindow.cpp 322  0x7fffe72d4664 
      3  operator()                                                                                                                                                                                                                                                                                                                                                                                                                                            qobjectdefs_impl.h      116  0x7fffe72d83f7 
      4  QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<std::integer_sequence<long unsigned int>, QtPrivate::List<>, void, ProjectExplorer::Internal::CompileOutputSettings::CompileOutputSettings()::<lambda()>::<lambda()>>::call(ProjectExplorer::Internal::CompileOutputSettings::CompileOutputSettings()::<lambda()>::<lambda()>&, void * *)::<lambda()>>(void * *, struct {...} &&)                                              qobjectdefs_impl.h      65   0x7fffe72d85af 
      5  QtPrivate::FunctorCall<std::integer_sequence<long unsigned int>, QtPrivate::List<>, void, ProjectExplorer::Internal::CompileOutputSettings::CompileOutputSettings()::<lambda()>::<lambda()>>::call(struct {...} &, void * *)                                                                                                                                                                                                                          qobjectdefs_impl.h      115  0x7fffe72d843c 
      6  QtPrivate::FunctorCallable<ProjectExplorer::Internal::CompileOutputSettings::CompileOutputSettings()::<lambda()>::<lambda()>>::call<QtPrivate::List<>, void>(struct {...} &, void *, void * *)                                                                                                                                                                                                                                                        qobjectdefs_impl.h      337  0x7fffe72d7fab 
      7  QtPrivate::QCallableObject<ProjectExplorer::Internal::CompileOutputSettings::CompileOutputSettings()::<lambda()>::<lambda()>, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)                                                                                                                                                                                                                          qobjectdefs_impl.h      547  0x7fffe72d7ba8 
      9  Utils::BaseAspect::volatileValueChanged                                                                                                                                                                                                                                                                                                                                                                                                               moc_aspects.cpp         162  0x7ffff754ebb5 
      10 Utils::BaseAspect::handleGuiChanged                                                                                                                                                                                                                                                                                                                                                                                                                   aspects.cpp             3496 0x7ffff75a0981 
      11 operator()                                                                                                                                                                                                                                                                                                                                                                                                                                            aspects.cpp             2150 0x7ffff75970c0 
      12 operator()                                                                                                                                                                                                                                                                                                                                                                                                                                            qobjectdefs_impl.h      116  0x7ffff75b137f 
      13 QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<std::integer_sequence<long unsigned int>, QtPrivate::List<>, void, Utils::BoolAspect::addToLayoutHelper(Layouting::Layout&, QAbstractButton *)::<lambda()>>::call(Utils::BoolAspect::addToLayoutHelper(Layouting::Layout&, QAbstractButton *)::<lambda()>&, void * *)::<lambda()>>(void * *, struct {...} &&)                                                                  qobjectdefs_impl.h      65   0x7ffff75b2401 
      14 QtPrivate::FunctorCall<std::integer_sequence<long unsigned int>, QtPrivate::List<>, void, Utils::BoolAspect::addToLayoutHelper(Layouting::Layout&, QAbstractButton *)::<lambda()>>::call(struct {...} &, void * *)                                                                                                                                                                                                                                    qobjectdefs_impl.h      115  0x7ffff75b13c4 
      15 QtPrivate::FunctorCallable<Utils::BoolAspect::addToLayoutHelper(Layouting::Layout&, QAbstractButton *)::<lambda()>>::call<QtPrivate::List<>, void>(struct {...} &, void *, void * *)                                                                                                                                                                                                                                                                  qobjectdefs_impl.h      337  0x7ffff75afad1 
      16 QtPrivate::QCallableObject<Utils::BoolAspect::addToLayoutHelper(Layouting::Layout&, QAbstractButton *)::<lambda()>, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)                                                                                                                                                                                                                                    qobjectdefs_impl.h      547  0x7ffff75ad65a 
      18 Utils::UndoSignaller::changed                                                                                                                                                                                                                                                                                                                                                                                                                         moc_aspects.cpp         1295 0x7ffff755059b 
      19 Utils::UndoSignaller::emitChanged                                                                                                                                                                                                                                                                                                                                                                                                                     aspects.h               1064 0x7ffff75b42c0 
      20 Utils::UndoableValue<bool>::setInternal                                                                                                                                                                                                                                                                                                                                                                                                               aspects.h               1113 0x7ffff75c8636 
      21 Utils::UndoableValue<bool>::set                                                                                                                                                                                                                                                                                                                                                                                                                       aspects.h               1099 0x7ffff75bd403 
      22 operator()                                                                                                                                                                                                                                                                                                                                                                                                                                            aspects.cpp             2145 0x7ffff7597043 
      23 operator()                                                                                                                                                                                                                                                                                                                                                                                                                                            qobjectdefs_impl.h      116  0x7ffff75b1307 
      24 QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<std::integer_sequence<long unsigned int>, QtPrivate::List<>, void, Utils::BoolAspect::addToLayoutHelper(Layouting::Layout&, QAbstractButton *)::<lambda()>>::call(Utils::BoolAspect::addToLayoutHelper(Layouting::Layout&, QAbstractButton *)::<lambda()>&, void * *)::<lambda()>>(void * *, struct {...} &&)                                                                  qobjectdefs_impl.h      65   0x7ffff75b23da 
      25 QtPrivate::FunctorCall<std::integer_sequence<long unsigned int>, QtPrivate::List<>, void, Utils::BoolAspect::addToLayoutHelper(Layouting::Layout&, QAbstractButton *)::<lambda()>>::call(struct {...} &, void * *)                                                                                                                                                                                                                                    qobjectdefs_impl.h      115  0x7ffff75b134c 
      26 QtPrivate::FunctorCallable<Utils::BoolAspect::addToLayoutHelper(Layouting::Layout&, QAbstractButton *)::<lambda()>>::call<QtPrivate::List<>, void>(struct {...} &, void *, void * *)                                                                                                                                                                                                                                                                  qobjectdefs_impl.h      337  0x7ffff75afa99 
      27 QtPrivate::QCallableObject<Utils::BoolAspect::addToLayoutHelper(Layouting::Layout&, QAbstractButton *)::<lambda()>, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)                                                                                                                                                                                                                                    qobjectdefs_impl.h      547  0x7ffff75ad5aa 
      49 Core::Internal::(anonymous namespace)::SettingsDialog::execDialog                                                                                                                                                                                                                                                                                                                                                                                     settingsdialog.cpp      795  0x7fffed69213c 
      50 Core::Internal::executeSettingsDialog                                                                                                                                                                                                                                                                                                                                                                                                                 settingsdialog.cpp      819  0x7fffed692343 
      51 Core::ICore::showOptionsDialog                                                                                                                                                                                                                                                                                                                                                                                                                        icore.cpp               471  0x7fffed892011 
      52 operator()                                                                                                                                                                                                                                                                                                                                                                                                                                            icore.cpp               2018 0x7fffed89c236 
      53 operator()                                                                                                                                                                                                                                                                                                                                                                                                                                            qobjectdefs_impl.h      116  0x7fffed8ada55 
      54 QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<std::integer_sequence<long unsigned int>, QtPrivate::List<>, void, Core::Internal::ICorePrivate::registerDefaultActions()::<lambda()>>::call(Core::Internal::ICorePrivate::registerDefaultActions()::<lambda()>&, void * *)::<lambda()>>(void * *, struct {...} &&)                                                                                                            qobjectdefs_impl.h      65   0x7fffed8ae320 
      55 QtPrivate::FunctorCall<std::integer_sequence<long unsigned int>, QtPrivate::List<>, void, Core::Internal::ICorePrivate::registerDefaultActions()::<lambda()>>::call(struct {...} &, void * *)                                                                                                                                                                                                                                                         qobjectdefs_impl.h      115  0x7fffed8ada9a 
      56 QtPrivate::FunctorCallable<Core::Internal::ICorePrivate::registerDefaultActions()::<lambda()>>::call<QtPrivate::List<>, void>(struct {...} &, void *, void * *)                                                                                                                                                                                                                                                                                       qobjectdefs_impl.h      337  0x7fffed8ac94b 
      57 QtPrivate::QCallableObject<Core::Internal::ICorePrivate::registerDefaultActions()::<lambda()>, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)                                                                                                                                                                                                                                                         qobjectdefs_impl.h      547  0x7fffed8ab302 
      60 QtPrivate::FunctorCall<std::integer_sequence<unsigned long, 0ul>, QtPrivate::List<bool>, void, void (QAction:: *)(bool)>::call(void (QAction:: *)(bool), QAction *, void * *)::{lambda()#1}::operator()() const                                                                                                                                                                                                                                       qobjectdefs_impl.h      127  0x7ffff7943f1f 
      61 QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<std::integer_sequence<unsigned long, 0ul>, QtPrivate::List<bool>, void, void (QAction:: *)(bool)>::call(void (QAction:: *)(bool), QAction *, void * *)::{lambda()#1}>(void * *, QtPrivate::FunctorCall<std::integer_sequence<unsigned long, 0ul>, QtPrivate::List<bool>, void, void (QAction:: *)(bool)>::call(void (QAction:: *)(bool), QAction *, void * *)::{lambda()#1}&&) qobjectdefs_impl.h      65   0x7ffff794417b 
      62 QtPrivate::FunctorCall<std::integer_sequence<unsigned long, 0ul>, QtPrivate::List<bool>, void, void (QAction:: *)(bool)>::call                                                                                                                                                                                                                                                                                                                        qobjectdefs_impl.h      126  0x7ffff7943f93 
      63 QtPrivate::FunctionPointer<void (QAction:: *)(bool)>::call<QtPrivate::List<bool>, void>                                                                                                                                                                                                                                                                                                                                                               qobjectdefs_impl.h      174  0x7ffff7943d78 
      64 QtPrivate::QCallableObject<void (QAction:: *)(bool), QtPrivate::List<bool>, void>::impl                                                                                                                                                                                                                                                                                                                                                               qobjectdefs_impl.h      545  0x7ffff7943c51 
      89 main                                                                                                                                                                                                                                                                                                                                                                                                                                                  main.cpp                1024 0x555555567dda
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cstenger Christian Stenger
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes