PE: Fix crash when toggling check box

Amends 7935281cbb979c86033ed6f5447d312e41c761f5.

Fixes: QTCREATORBUG-33628
Change-Id: Ib982165b686b22c0e24d68e78f12a8e0f562a68f
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>